<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".operate.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/tracking_number"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontFamily="@font/geomanist" />

        <EditText
            android:id="@+id/tracking_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input_background"
            android:hint="@string/tracking_number"
            android:inputType="text"
            app:fontFamily="@font/geomanist"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locker_number"
            app:fontFamily="@font/geomanist"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/locker_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/input_background"
            android:hint="@string/locker_number"
            app:fontFamily="@font/geomanist"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="17sp"
            app:fontFamily="@font/geomanist" />

        <EditText
            android:id="@+id/description_text"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_background"
            android:hint="@string/description"
            app:fontFamily="@font/geomanist"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/stack_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Image Stack: 0 (Maximum 4 pictures)"
            app:fontFamily="@font/geomanist"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <RelativeLayout
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_alignParentStart="true"
                android:background="@drawable/picture_btn_back"
                android:onClick="takeImage"
                android:orientation="horizontal"
                android:textColor="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/take_picture"
                    android:textAlignment="center"
                    app:fontFamily="@font/geomanist"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_alignParentEnd="true"
                android:background="@drawable/picture_btn_back"
                android:onClick="savePackageInfo"
                android:orientation="horizontal"
                android:textColor="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/save_picture"
                    android:textAlignment="center"
                    app:fontFamily="@font/geomanist"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/cropimg"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/send_layout"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

             <RelativeLayout
                android:id="@+id/btn_connect"
                android:layout_width="220dip"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/main_btn_back"
                android:onClick="connectWithBT"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:textColor="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/connect_via_bluetooth"
                    android:textAlignment="center"
                    app:fontFamily="@font/geomanist"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_bluetooth"
                android:layout_width="220dip"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/main_btn_back"
                android:onClick="sendWithBT"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:textColor="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/send_data_via_bluetooth"
                    android:textAlignment="center"
                    app:fontFamily="@font/geomanist"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/btn_reject"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:background="@drawable/main_btn_back"
                android:onClick="sendWithInternet"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                android:textColor="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/send_data_via_internet"
                    android:textAlignment="center"
                    app:fontFamily="@font/geomanist"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
