<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_mode"
            android:textAlignment="center"
            app:fontFamily="@font/geomanist"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/btn_inputimage"
                android:layout_width="200dip"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:background="@drawable/main_btn_back"
                android:onClick="allModeClicked"
                android:orientation="horizontal"
                android:textColor="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/inputs_image"
                    app:fontFamily="@font/geomanist"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_inputsonly"
                android:layout_width="200dip"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/main_btn_back"
                android:onClick="inputOnlyModeClicked"
                android:orientation="horizontal"
                android:textColor="@color/colorAccent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/inputs"
                    app:fontFamily="@font/geomanist"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
